# cpp-mini-projects

15-puzzle/: .clang-format  .gitignore  CMakeLists.txt  design.md  game  main  main.cpp
15-puzzle/include/: board.h  constants.h  direction.h  point.h  tile.h
15-puzzle/src/: board.cpp  direction.cpp  main.cpp
